--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,13 @@
-statements
-backups
+.lastGitDescribe
 
 ###OSX###
-
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
 
 ###SublimeText###
-
-# cache files for sublime text
-*.tmlanguage.cache
-*.tmPreferences.cache
-*.stTheme.cache
-
-# workspace files are user-specific
 *.sublime-workspace
-
-# project files should be checked into the repository, unless a significant
-# proportion of contributors will probably not be using SublimeText
-# *.sublime-project
-
-# sftp configuration file
-sftp-config.json
-
+*.sublime-project
 
 ###C++###
-
 # Compiled Object files
 *.slo
 *.lo
@@ -61,9 +23,6 @@ sftp-config.json
 *.dylib
 *.dll
 
-# Fortran module files
-*.mod
-
 # Compiled Static libraries
 *.lai
 *.la
@@ -77,21 +36,7 @@ sftp-config.json
 
 
 ###Qt###
-
-# C++ objects and libs
-
-*.slo
-*.lo
-*.o
-*.a
-*.la
-*.lai
-*.so
-*.dll
-*.dylib
-
 # Qt-es
-
 /.qmake.cache
 /.qmake.stash
 *.pro.user
@@ -104,7 +49,6 @@ Makefile*
 *-build-*
 
 # QtCreator
-
 *.autosave
 
 #QtCtreator Qml
